Change button to constraintLayout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">MyTestTaskApplication</string>
+    <string name="hey_there">Hey There!</string>
 </resources>
